<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/white_bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/arrivalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="time"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalTxt"
        app:srcCompat="@drawable/line_airple_blue" />

    <TextView
        android:id="@+id/fromTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/fromShortTxt"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalTxt" />

    <TextView
        android:id="@+id/fromShortTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="from"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="@+id/fromTxt"
        app:layout_constraintStart_toStartOf="@+id/fromTxt"
        app:layout_constraintTop_toBottomOf="@+id/fromTxt" />

    <TextView
        android:id="@+id/toTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/toShortTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

    <TextView
        android:id="@+id/toShortTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toShort"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="@+id/toTxt"
        app:layout_constraintStart_toStartOf="@+id/toTxt"
        app:layout_constraintTop_toBottomOf="@+id/toTxt" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/dash_line" />

    <TextView
        android:id="@+id/priceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="$0.0"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/seat_blue" />

    <TextView
        android:id="@+id/classTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="class"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13" />
</androidx.constraintlayout.widget.ConstraintLayout>